--- a/app/common/dropdown/index.css
+++ b/app/common/dropdown/index.css
@@ -5,7 +5,7 @@
   justify-content: center;
 }
 
-.Dropdown_disabled {
+.dropdown-disabled {
   color: rgba(0, 0, 0, 0.25);
   background-color: #f5f5f5;
   border-color: #d9d9d9;
@@ -23,7 +23,7 @@
   border-radius: 4px;
 }
 
-.Dropdown_Overlay {
+.dropdown-overlay {
   width: 100%;
   display: none;
   box-shadow: 0 2px 8px rgba(0, 0, 0, .15);
@@ -34,22 +34,22 @@
   left: 0;
 }
 
-.Dropdown_Overlay_Visible>.Dropdown_Overlay {
+.dropdown-overlay__visible>.dropdown-overlay {
   display: block;
 }
 
-.Dropdown_Hover:hover>.Dropdown_Overlay {
-  display: block;
-  animation-name: fadeInUp;
-  animation-duration: 200ms;
-}
-
-.Dropdown_Click_Expand>.Dropdown_Overlay {
+.dropdown-hover:hover>.dropdown-overlay {
   display: block;
   animation-name: fadeInUp;
   animation-duration: 200ms;
 }
 
-.Dropdown_Child {
+.dropdown-click__expand>.dropdown-overlay {
+  display: block;
+  animation-name: fadeInUp;
+  animation-duration: 200ms;
+}
+
+.dropdown-content {
   width: 100%;
 }
