--- a/app/components/avatar/avatar.css
+++ b/app/components/avatar/avatar.css
@@ -34,6 +34,10 @@
   margin-right: 12px;
 }
 
+.header-userpopover__list {
+  width: 100%;
+}
+
 
 .header-userpopover-info>div {
   font-family: PingFangSC-Medium;
