--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -25,6 +25,15 @@
   overflow-x: hidden;
 }
 
+.article-title {
+  opacity: 0.2;
+}
+
+.article-loading {
+  font-size: 35px;
+  margin-top: 90px;
+}
+
 .article-preview::-webkit-scrollbar {
   width: 0 !important
 }
@@ -216,7 +225,7 @@
   margin: 0;
   color: #333;
   word-wrap: break-word;
-  line-height: 26px;
+  line-height: 28px;
 }
 
 .article-html img {
