--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -117,7 +117,7 @@
 }
 
 .article-html code {
-  background-color: #f9f2f4;
+  /* background-color: #f9f2f4; */
   border-radius: 4px;
   padding: 2px 4px;
 }
@@ -327,19 +327,18 @@
 }
 
 .article-html pre {
-  margin: .5em 0;
+  margin: 0;
+  padding-bottom: 0;
   font-size: 12px;
   overflow-x: scroll;
   position: relative;
-  box-shadow: 1px 1px .5em black inset;
 }
 
 .article-pre__box {
   border-radius: .5em;
   border: .2em solid hsl(0, 0%, 33%);
   overflow-x: scroll;
-  background: hsl(0, 0%, 8%);
-  padding: 0 12px;
+  background: #2d2d2d;
   position: relative;
   overflow: hidden;
   margin-bottom: 0.56em;
