--- a/app/components/space-catalog/index.css
+++ b/app/components/space-catalog/index.css
@@ -126,12 +126,6 @@
   transition: all linear 0.2s;
 }
 
-.template:hover {
-  box-shadow: 0 2px 8px rgba(0, 0, 0, .05);
-  border: 2px solid rgba(37, 184, 100, .3);
-  padding: 7px;
-}
-
 .template>img {
   width: 100%;
   height: auto;
@@ -145,9 +139,11 @@
 
 .template-button {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -158,9 +154,19 @@
 
 .template:hover>.template-button {
   opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .template-button>.button {
   width: 78%;
   margin-bottom: 12px;
+}
+
+.template-button>.Icon {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 6px;
+  color: #ffffff;
+  font-size: 18px;
 }
