--- a/app/public/editor/simditor.css
+++ b/app/public/editor/simditor.css
@@ -284,6 +284,8 @@
   margin: 0;
   padding: 0 0 0 6px;
   list-style: none;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .simditor-toolbar_mobile {
