--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -117,16 +117,22 @@
 }
 
 .article-html code {
-  /* background-color: #f9f2f4; */
-  border-radius: 4px;
-  padding: 2px 4px;
+  font-family: monospace;
+  font-size: inherit;
+  background-color: rgba(0, 0, 0, 0.06);
+  padding: 0 2px;
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  border-radius: 2px 2px;
+  line-height: inherit;
+  word-wrap: break-word;
+  text-indent: 0;
 }
 
 .article-html ol,
 .article-html ul {
   list-style: disc outside none;
   margin: 12px 0;
-  padding: 0 0 0 25px;
+  padding: 0 0 0 36px;
   line-height: 1.6;
 }
 
@@ -135,10 +141,13 @@
 }
 
 .article-html blockquote {
-  border-left: 3px solid #ddd;
-  padding: 5px 0 5px 10px;
-  margin: 15px 0 15px 15px;
-  quotes: none;
+  padding: 12px;
+  margin: 0 0 1.1em;
+  border-left: 5px solid rgba(102, 128, 153, 0.075);
+  border-left-width: 10px;
+  background-color: rgba(102, 128, 153, 0.05);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .article-html table {
