--- a/app/common/input/index.css
+++ b/app/common/input/index.css
@@ -8,7 +8,7 @@
   border-radius: 4px;
 }
 
-.input-wrapper:hover {
+.input-wrapper:not(.input-disabled):hover {
   border-color: #25b864;
 }
 
@@ -41,7 +41,7 @@
   opacity: 0.5;
 }
 
-.input-full:hover {
+.input-full:not(.input-disabled):hover {
   border: 1px solid #47c479;
   outline: 0;
   box-shadow: 0 0 0 2px rgba(37, 184, 100, .2);
@@ -69,4 +69,12 @@
 .input-addon__before>div {
   position: relative;
   top: 1px;
+}
+
+.input-disabled {}
+
+.input-disabled>input {
+  color: rgba(0, 0, 0, .25);
+  background-color: #f5f5f5;
+  cursor: not-allowed;
 }
