--- a/app/components/header-article/index.css
+++ b/app/components/header-article/index.css
@@ -63,17 +63,17 @@
     left: -134px;
 }
 
-.article-header_Edit_Btn {
+.article-header__edit {
     border-radius: 4px;
 }
 
-.article-header_Edit_Btn>.button {
+.article-header__edit>.button {
     background: #47c479;
     color: #ffffff;
     border: 1px solid #47c479;
 }
 
-.article-header_Edit_Btn>div {
+.article-header__edit>div {
     height: 32px;
     background: #47c479;
     display: flex;
@@ -84,7 +84,7 @@
     cursor: pointer;
 }
 
-.article-header_Edit_Btn>div>i {
+.article-header__edit>div>i {
     position: relative;
     top: 1px;
     color: #ffffff;
@@ -120,7 +120,7 @@
     top: 56px;
 }
 
-.article-header_Save {
+.article-header__save {
     line-height: 22px;
     font-size: 12px;
     color: #8c8c8c;
@@ -132,4 +132,20 @@
     min-width: 100%;
     height: 48px;
     padding-right: 0;
+}
+
+.article-header__share {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.article-header__share>button {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.article-header__share-link {
+    flex-shrink: 1;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
