feat: 目录超出移动

--- a/app/common/m-404/index.css
+++ b/app/common/m-404/index.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding-bottom: 40px;
+  margin-top: 58px;
 }
 
 .mobile_404_content {
