--- a/app/components/content-layout/index.css
+++ b/app/components/content-layout/index.css
@@ -9,6 +9,7 @@
   align-items: flex-end;
   justify-content: space-between;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .content-recent-edit {
