feat: 新增文档删除确认和Alert组件

--- a/app/common/table/index.css
+++ b/app/common/table/index.css
@@ -8,8 +8,8 @@
 }
 
 .table-empty {
-  border: 1px solid #e8e8e8;
-  border-top: none;
+  /* border: 1px solid #e8e8e8;
+border-top: none; */
 }
 
 .table-header>th {
