--- a/app/components/search/index.css
+++ b/app/components/search/index.css
@@ -1,13 +1,15 @@
 .search {
-  width: 320px;
-  height: 32px;
+  width: 200px;
+  height: 30px;
   display: flex;
   align-items: center;
-  background: #f5f5f5;
+  background: #fff;
   color: #595959;
   border-radius: 4px;
   overflow: hidden;
   margin-right: 16px;
+  border: 1px solid #d9d9d9;
+  font-size: 12px;
 }
 
 .search .Icon {
@@ -18,9 +20,9 @@
 .search-input {
   width: 100%;
   border: none;
-  background: #f5f5f5;
   height: 100%;
   color: #595959;
-  font-size: 14px;
+  font-size: inherit;
   padding-right: 16px;
+  background: inherit;
 }
