--- a/app/index.css
+++ b/app/index.css
@@ -89,6 +89,10 @@ body {
     background-color: #fff;
     -webkit-font-feature-settings: "tnum";
     font-feature-settings: "tnum";
+    padding-top: constant(safe-area-inset-top);
+    padding-left: constant(safe-area-inset-left);
+    padding-right: constant(safe-area-inset-right);
+    padding-bottom: constant(safe-area-inset-bottom);
 }
 
 article,
