--- a/app/common/button/index.css
+++ b/app/common/button/index.css
@@ -151,3 +151,7 @@
   -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
 }
+
+.button-mobile {
+  height: 28px;
+}
