--- a/app/components/table-header/index.css
+++ b/app/components/table-header/index.css
@@ -26,16 +26,6 @@
   margin-left: 10px;
 }
 
-.table-header-mobile>.search {
-  width: 100%;
-  height: 46px;
-  border: none;
-  font-size: 14px;
-  border-bottom: 1px solid #e8e8e8;
-  border-radius: 0;
-  background: #e8e8e8;
-}
-
 .table-header-mobile-head {
   justify-content: space-between;
   padding: 8px 14px;
@@ -48,4 +38,7 @@
   height: 42px;
   border-bottom: 1px solid #e8e8e8;
   border-radius: 0;
+  font-size: 14px;
+  background: #f3f3f3;
+  border: none;
 }
