--- a/app/page/article/index.css
+++ b/app/page/article/index.css
@@ -5,3 +5,21 @@
   overflow: hidden;
   position: relative;
 }
+
+.article-header__loading {
+  width: 100%;
+  height: 58px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .06);
+  z-index: 11;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #fff;
+}
+
+.article-header__loading>.Icon {
+  font-size: 20px;
+}
