--- a/app/public/editor/simditor.css
+++ b/app/public/editor/simditor.css
@@ -1105,4 +1105,7 @@
 .simditor .simditor-body p code.xigua-inline__code {
   height: 26px;
   margin: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
