--- a/app/components/recent-content/index.css
+++ b/app/components/recent-content/index.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
   padding: 10px 12px;
   box-sizing: border-box;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .recent-content__mobile>.recent-content__right {
@@ -71,4 +71,8 @@
   width: 20px;
   height: 20px;
   cursor: pointer;
+}
+
+.recent-content__normal {
+  cursor: initial !important;
 }
