bugfix: 修复code复制问题

--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -405,7 +405,7 @@
   background-color: #e8e8e8;
 }
 
-.code-tooltip__item-tooltip>input {
+.code-tooltip__item-tooltip>textarea {
   position: absolute;
   left: 9999px;
 }
