bugfix: 修复移动端文章页报错

--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -82,7 +82,7 @@
     margin-right: 40px;
 }
 
-.Header_Popover_Add_Icon {
+.header-popover__addIcon {
     font-size: 20px;
     margin-right: 4px;
     color: #25B668;
