--- a/app/components/content-layout/index.css
+++ b/app/components/content-layout/index.css
@@ -2,6 +2,7 @@
   flex: 1;
   overflow: hidden;
   padding: 10px;
+  margin-left: 206px;
 }
 
 .content-layout__head {
@@ -23,7 +24,14 @@
   width: 100%;
 }
 
-.recent-loading {
-  position: relative;
-  top: 0;
+.recent-content__loading {
+  width: 100%;
+  background: #ffffff;
+  border-radius: 2px;
+  border: 1px solid #e8e8e8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 32px 12px;
+  box-sizing: border-box;
 }
